Add a default team to new games for testing purposes Clicking on the question now results in the default team taking it Game changes updates for all users Question dialogs are presented to all users